Left-Aligned Codes + Fixed Title link in Game

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -14,6 +14,12 @@ p {
   text-align: center;
 }
 
+article {
+	text-align: left;
+	padding: 20px;
+	margin:20px;
+	}
+
 .carousel-item img {
         display: block;
         margin-left: auto;
